# SeminarParallelRechner

./: Benchmark.md  Benchmark.xlsx  README.md  dokumentation.tex  literatur.bib  literatur.bib.bak
ADD/: CMakeLists.txt  main.cu
Floyd/: CMakeLists.txt  main.cu
images/: CUDAUVA.psd  MPICluster.psd  MPIModell.psd
